# semanticsearch

./: .gitignore  docker-compose.yaml
src/: chroma.py  documents.py  elastic.py  llama.py  mongo.py  pyproject.toml  rag.py
